--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Curtis Grant
 description: Math Graduate student working in probability. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: 
 
 #
 # Flags below are optional
