--- a/_config.yml
+++ b/_config.yml
@@ -72,6 +72,11 @@ kramdown:
 sass:
   style: :expanded # You might prefer to minify using :compressed
 
+markdown: kramdown
+kramdown:
+    math_engine: katex
+
+
 # Use the following plug-ins
 gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
