--- a/_config.yml
+++ b/_config.yml
@@ -72,8 +72,9 @@ kramdown:
 sass:
   style: :expanded # You might prefer to minify using :compressed
 
-
-
+markdown: kramdown
+kramdown:
+    math_engine: katex
 
 # Use the following plug-ins
 gems:
