--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,7 @@ version: v1.2.0
 kramdown:
   # Use GitHub flavored markdown, including triple backtick fenced code blocks
   input: GFM
+  mathjax: true 
   # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
   syntax_highlighter: rouge
   syntax_highlighter_opts:
@@ -72,9 +73,7 @@ kramdown:
 sass:
   style: :expanded # You might prefer to minify using :compressed
 
-markdown: kramdown
-kramdown:
-    math_engine: katex
+
 
 # Use the following plug-ins
 gems:
