--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Curtis Grant
 
 # Short bio or description (displayed in the header)
-description: Math Ph.D candidate working in probability. 
+description: Math PhD candidate working in probability. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: 
