--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,9 @@
 #
 
 # Name of your site (displayed in the header)
-name: Curtis Grant
-
+name: Nic Fellini
 # Short bio or description (displayed in the header)
-description: Math PhD candidate working in probability. 
+description: Math PhD candidate working in Number Theory. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: 
